--- a/css/game.css
+++ b/css/game.css
@@ -10,7 +10,6 @@
 .card {
     aspect-ratio: 3/4; /* define a proporção */
     width: 100%;
-    background: #333;
     border-radius: 5px;
     position: relative;
     transition: all 400ms ease; /* animação do transform */
@@ -25,6 +24,7 @@
     background-position: center;
     border: 2px, solid, #39813a;
     border-radius: 5px;
+    transition: all 400ms ease;
 }
 
 .front {
