feat: adding styles to header and main

--- a/css/game.css
+++ b/css/game.css
@@ -1,10 +1,36 @@
+main {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-image: url('../images/bg.jpg');
+    background-size: cover;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 20px 50px;
+  }
+
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(255, 255, 255, 0.8);
+    font-size: 1.2em;
+    width: 100%;
+    max-width: 800px;
+    padding: 30px;
+    margin: 0 0 30px;
+    border-radius: 5px;
+  }
+  
+
 .grid {
     display: grid;
     grid-template-columns: repeat(5, 1fr); /* repete 5x, uma fração do grid  */
     gap: 15px; /* define espaçamento entre os cards */
     width: 100%;
     max-width: 800px;
-    margin: 100px auto; /* define top/bottom margin 0 e left-right margem automática, centraliza a imagem */
+    margin: 0 auto; /* define top/bottom margin 0 e left-right margem automática, centraliza a imagem */
 }
 
 .card {
@@ -14,6 +40,7 @@
     position: relative;
     transition: all 400ms ease; /* animação do transform */
     transform-style: preserve-3d; /* preserva um comportamento de 3d */
+    background-color: #ccc;
 }
 
 .face {
